<resources>
    <string name="app_name">Q &amp; A</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sing_in">Sing in</string>
    <string name="check">Проверить</string>
    <string name="first_question">Какой девиз Java?</string>
    <string name="write_once_run_anywhere">Write Once, Run Everywhere</string>
    <string name="write_once_run_nowhere">Write Once, Run Nowhere</string>
    <string name="take_hard_make_work">Take hard, Make work</string>
    <string name="save">Save</string>
    <string name="email_adress">Эл. адресс</string>
    <string name="change_avatar">Изменить аватар</string>
    <string name="post_advice">Делитесь подсказками, статьями и любыми материалам по теме программирования</string>
    <string name="random_player">Случайный игрок</string>
    <string name="friends_from_facebook">Друзья из Facebook</string>
    <string name="invite">Пригласить</string>
    <string name="new_game_button">Новая игра</string>
    <string name="empty_list">Empty List</string>
    <string name="answer">answer</string>
    <string name="message">message</string>
    <string name="delete_post">delete_post</string>
    <string name="learn">Learn</string>
    <string name="play_game">Play Game</string>
    <string name="friends">Friends</string>
    <string name="chats">Chats</string>
    <string name="archive">Archive</string>

    <string-array name="category">
        <item>Новые</item>
        <item>Интересные</item>
        <item>Последние</item>
        <item>Популярные</item>
        <item>Мои вопросы</item>
    </string-array>

    <string-array name="category_comments">
        <item>Дате</item>
        <item>Лайкам</item>
    </string-array>
</resources>
