<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:id="@+id/first_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:text="@string/first_question" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group"
            android:layout_below="@id/first_question">

            <RadioButton
                android:id="@+id/correct_answer"
                android:layout_width="match_parent"
                android:text="@string/write_once_run_anywhere"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:buttonTint="@color/light_orange"
                android:layout_height="wrap_content" />

            <RadioButton
                android:layout_width="match_parent"
                android:text="@string/write_once_run_nowhere"
                android:textColor="@color/black"
                android:buttonTint="@color/light_orange"
                android:textSize="18sp"
                android:layout_height="wrap_content" />

            <RadioButton
                android:layout_width="match_parent"
                android:text="@string/take_hard_make_work"
                android:textColor="@color/black"
                android:buttonTint="@color/light_orange"
                android:textSize="18sp"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </RelativeLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:backgroundTint="@color/end_bg_grad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:textColor="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>