<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/start_activity_gradient"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:id="@+id/main_registration_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:paddingStart="10dp"
            android:background="@drawable/start_facebook_button_style"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:paddingStart="10dp"
            android:background="@drawable/start_facebook_button_style"
            android:layout_height="50dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_button"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/sing_in"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:background="@drawable/start_button_style"/>

        </LinearLayout>

</LinearLayout>