<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/category_item_style"
        android:layout_margin="10dp"
        android:layout_height="400dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/profile_user_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/mytest"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:strokeColor="@color/light_orange"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/end_bg_grad"
            android:background="@drawable/category_item_style"
            android:layout_below="@id/profile_user_image"
            android:layout_centerHorizontal="true"
            android:id="@+id/change_avatar_button"
            android:text="@string/change_avatar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@id/change_avatar_button"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/end_bg_grad"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/username"
                    android:id="@+id/user_name_field"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/end_bg_grad"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/email_field"
                    android:hint="@string/email_adress"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_profile_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:background="@drawable/category_item_style"
            android:text="@string/save"
            android:layout_alignParentEnd="true"
            app:strokeColor="@color/light_orange"
            android:textColor="@color/text_button_color"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"/>

    </RelativeLayout>

</LinearLayout>